--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,28 @@
 .container {
 display: grid;
-    grid-template-columns: auto auto auto;
+    /*grid-template-columns: [column-1] auto [column-2] auto [column-3] auto;*/
     grid-template-rows: 50px 190px auto 50px;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    column-gap: 10px;
+    row-gap: 10px;
+    background-color: beige;
+    padding: 10px;
     grid-template-areas:
-    "area-a" "area-c" "area-c"
-    "area-b" "area-c" "area-c"
-    "area-b" "area-e" "area-d"
-    "area-f" "area-f" "area-f";
+    "area-a area-c area-c"
+    "area-b area-c area-c"
+    "area-b area-e area-d"
+    "area-f area-f area-f";
 }
 
 div {
     display: flex;
     justify-content: center;
-    background-color: darkred;
+    background-color: indianred;
+    border-style: solid;
+    border-color: darkred;
+    border-width: 2px;
     color: white;
-}
+    }
 
 .section-a {
     grid-area: area-a;
@@ -30,6 +38,9 @@ div {
 
 .section-d {
     grid-area: area-d;
+    align-self: start;
+    min-height: 100px;
+    align-items: stretch;
 }
 
 .section-e {
@@ -40,3 +51,14 @@ div {
     grid-area: area-f;
 }
 
+p {
+    margin: auto;
+}
+
+#sample-text {
+    margin: 15px
+}
+
+@media screen and (min-width: 576px) {
+
+}
